objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Alias_DBA_Volvo__c</fullName>
        <label>Account Alias (DBA)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Alias_DBA__c</fullName>
        <inlineHelpText>DBA or Nickname for the Account</inlineHelpText>
        <label>Account Alias (DBA)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Date__c</fullName>
        <description>Date Dealership was activated</description>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternate_County__c</fullName>
        <label>Alternate County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Miles_Per_Vehicle__c</fullName>
        <label>Annual Miles Per Vehicle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Volvo__c</fullName>
        <label>Application</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Corporate Sales Rep FIeld</description>
        <label>Application</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volvo</fullName>
                </value>
                <value>
                    <fullName>Mack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTDI_ID__c</fullName>
        <description>Represents the rooftop</description>
        <externalId>true</externalId>
        <label>CTDI ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Certified_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this location certified</description>
        <label>Certified Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_8_Fleet_Size__c</fullName>
        <label>Class 8 Fleet Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commodities__c</fullName>
        <label>Commodities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crash_Reports__c</fullName>
        <label>Crash Reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_NATLG_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this dealer a current North American Truck Leasing Group Member?</inlineHelpText>
        <label>Current NATLG Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>IF 
(Logged_In_User_Mack__c, Mack_Customer_Type__c, Volvo_Customer_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAB_Last_Updated_On__c</fullName>
        <label>Last Updated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_RDD__c</fullName>
        <label>Regional Development Director</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_City__c</fullName>
        <label>D&amp;B City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Country__c</fullName>
        <label>D&amp;B Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_County__c</fullName>
        <label>D&amp;B County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Employees__c</fullName>
        <label>D&amp;B Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D_B_Global_Ultimate_Business_Name__c</fullName>
        <label>D&amp;B Global Ultimate Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Legal_Name__c</fullName>
        <label>D&amp;B Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Line_of_Business__c</fullName>
        <label>D&amp;B Line of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Phone__c</fullName>
        <label>D&amp;B Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>D_B_Sales_Volume__c</fullName>
        <label>D&amp;B Sales Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_B_State_Province_Abbrv__c</fullName>
        <description>State/Province Code</description>
        <label>D&amp;B State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Street__c</fullName>
        <label>D&amp;B Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Year_Started__c</fullName>
        <label>D&amp;B Year Started</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Zip_Postal_Code__c</fullName>
        <label>D&amp;B Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_U_N_S_Number__c</fullName>
        <label>D-U-N-S Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daycab_Volvo__c</fullName>
        <label>% Daycab</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Daycab__c</fullName>
        <label>% Daycab</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dealer_Brand__c</fullName>
        <description>Determines Brand based on Dealer Code</description>
        <formula>If(ISBLANK(Dealer_Code__c), &apos;&apos;, IF(ISNUMBER(LEFT(Dealer_Code__c, 1)),&apos;Volvo&apos;, &apos;Mack&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <externalId>true</externalId>
        <label>Dealer Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dealer_Status__c</fullName>
        <label>Dealer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <description>Dealer Type</description>
        <label>Dealer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Line</fullName>
                </value>
                <value>
                    <fullName>Satellite</fullName>
                </value>
                <value>
                    <fullName>Parts Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Engine_Manufacturers__c</fullName>
        <description>Engine Manufacturers</description>
        <inlineHelpText>Engine Manufacturers</inlineHelpText>
        <label>Engine Manufacturers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FE_Current_Volvo__c</fullName>
        <inlineHelpText>Current Fuel Efficiency</inlineHelpText>
        <label>FE Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FE_Current__c</fullName>
        <inlineHelpText>Current Fuel Efficiency</inlineHelpText>
        <label>FE Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FE_Goal_Volvo__c</fullName>
        <inlineHelpText>Target Fuel Efficiency</inlineHelpText>
        <label>FE Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FE_Goal__c</fullName>
        <inlineHelpText>Target Fuel Efficiency</inlineHelpText>
        <label>FE Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fleet_Name__c</fullName>
        <description>Fleet Name</description>
        <inlineHelpText>Fleet Name</inlineHelpText>
        <label>Fleet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Phone__c</fullName>
        <label>Fleet Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fleet_Size_Volvo__c</fullName>
        <label>Fleet Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fleet_Size__c</fullName>
        <label>Fleet Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fleet_Type__c</fullName>
        <description>Fleet Type</description>
        <label>Fleet Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleetseek_Last_Updated_On__c</fullName>
        <label>Last Updated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Lead_Conversion_Do_not_Map_in_Loads__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field to understand that new account record is bing created from a Lead Conversion process so a validation rule can prevent it.</description>
        <label>From Lead Conversion (do not display)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasActivity__c</fullName>
        <formula>IF(ISNULL(LastActivityDate),&quot;No&quot;,&quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasActivity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspections__c</fullName>
        <label>Inspections</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Internally_Viewable_Conquest__c</fullName>
        <formula>IF( (CONTAINS($Profile.Name, &apos;Volvo&apos;) &amp;&amp; Volvo_Customer_Type__c = &apos;Conquest&apos;) || (CONTAINS($Profile.Name, &apos;Mack&apos;) &amp;&amp; Mack_Customer_Type__c = &apos;Conquest&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Internally Viewable Conquest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Internally_Viewable_Retention__c</fullName>
        <formula>IF( (CONTAINS($Profile.Name, &apos;Volvo&apos;) &amp;&amp; Volvo_Customer_Type__c = &apos;Retention&apos;) || (CONTAINS($Profile.Name, &apos;Mack&apos;) &amp;&amp; Mack_Customer_Type__c = &apos;Retention&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Internally Viewable Retention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Viewable_Conquest_Account__c</fullName>
        <formula>IF((Mack_Customer_Type__c = &apos;Conquest&apos; &amp;&amp; TEXT($User.Dealer_Brand__c) = &apos;Mack&apos;) || (Volvo_Customer_Type__c = &apos;Conquest&apos; &amp;&amp; TEXT($User.Dealer_Brand__c) = &apos;Volvo&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Viewable Conquest Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Viewable_Retention_Account__c</fullName>
        <formula>IF(
(Volvo_Customer_Type__c = &apos;Retention&apos;)
&amp;&amp; 
(TEXT($User.Dealer_Brand__c) = &apos;Volvo&apos;)
||
(Volvo_Customer_Type__c = &apos;Retention&apos;)
&amp;&amp; 
(TEXT($User.Dealer_Brand__c) = &apos;Mack&apos;)
, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Viewable Retention Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Mack_Registration_Date__c</fullName>
        <label>Last Mack Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Volvo_Registration_Date__c</fullName>
        <label>Last Volvo Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logged_In_User_Mack__c</fullName>
        <formula>TEXT($User.Dealer_Brand__c) = &apos;Mack&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged In User Mack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logged_In_User_Volvo__c</fullName>
        <formula>TEXT( $User.Dealer_Brand__c) = &apos;Volvo&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged In User Volvo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCN__c</fullName>
        <label>MCN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mack_Customer_Type__c</fullName>
        <description>The system shall dynamically flag a Customer Account with a Customer Type as &apos;Conquest&apos; or &apos;Retention&apos; so that the logged in User can identify the Account they are viewing.</description>
        <formula>IF (
  AND(
    (TEXT($User.Dealer_Brand__c)==&quot;Mack&quot; ||$Profile.Name = &quot;Mack Sales Rep&quot;),
    OR(
         ISBLANK(Last_Mack_Registration_Date__c),
         Last_Mack_Registration_Date__c &gt;= TODAY() + 365*5
       )
  )
,&quot;Conquest&quot;,

IF (
  AND(
    (TEXT($User.Dealer_Brand__c)==&quot;Mack&quot; ||$Profile.Name = &quot;Mack Sales Rep&quot;),
    Last_Mack_Registration_Date__c &lt; TODAY() + 365*5
       )
,&quot;Retention&quot;,
&apos;&apos;
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The system shall dynamically flag a Customer Account with a Customer Type as &apos;Conquest&apos; or &apos;Retention&apos; so that the logged in User can identify the Account they are viewing.</inlineHelpText>
        <label>Mack Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mack_Dealer_Code__c</fullName>
        <label>Mack Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mack_National_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mack National Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mack_Sales_Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this account a target account for a dealer&apos;s sales plan?</inlineHelpText>
        <label>Mack Dealer Planned Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mack_VDA_Count__c</fullName>
        <label>Mack VDA Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MergeStatus__c</fullName>
        <label>MergeStatus</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miles_Driven_Volvo__c</fullName>
        <label>Miles Driven</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miles_Driven__c</fullName>
        <label>Miles Driven</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NACM_ID__c</fullName>
        <externalId>true</externalId>
        <label>NACM ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>POLK_ID__c</fullName>
        <externalId>true</externalId>
        <label>POLK ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Dealer_Code__c</fullName>
        <label>Parent Dealer Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <inlineHelpText>Dealer code to receive credit for opportunity</inlineHelpText>
        <label>Assigned Dealer</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_DPM__c</fullName>
        <label>Parts DPM</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_RPD__c</fullName>
        <label>Parts RPD</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_ID_CreatedDate__c</fullName>
        <label>Party ID Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Party_ID_LastModifiedDate__c</fullName>
        <label>Party ID Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Party_ID__c</fullName>
        <externalId>true</externalId>
        <label>Party ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Polk_Active_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Polk Active Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Polk_Fleet_Mix_Volvo__c</fullName>
        <label>Polk Fleet Mix Volvo</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Polk_Last_Updated_On__c</fullName>
        <label>Last Updated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Polk_Local_Fleet_Size__c</fullName>
        <label>Polk Local Fleet Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Polk_National_Fleet_Size__c</fullName>
        <label>Polk National Fleet Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_County__c</fullName>
        <label>Primary County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Make_Volvo__c</fullName>
        <label>Primary Make</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Make__c</fullName>
        <label>Primary Make</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RSL_Cruise__c</fullName>
        <label>RSL Cruise</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSL_Pedal__c</fullName>
        <label>RSL Pedal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region of Dealership</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>Western</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Carrier_Type__c</fullName>
        <label>Registration Carrier Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canadian Government</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Finance Lease</fullName>
                </value>
                <value>
                    <fullName>For Hire</fullName>
                </value>
                <value>
                    <fullName>Full Service Lease</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Local Government (U.S.Only)</fullName>
                </value>
                <value>
                    <fullName>Manufacturer Sponsored Lease</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>State Government (U.S. Only)</fullName>
                </value>
                <value>
                    <fullName>U.S. Government</fullName>
                </value>
                <value>
                    <fullName>Utilities / Communications</fullName>
                </value>
                <value>
                    <fullName>Vehicle Manufacturer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <formula>If 
(Logged_In_User_Mack__c, TEXT(Last_Mack_Registration_Date__c), TEXT(Last_Volvo_Registration_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Vocation__c</fullName>
        <label>Registration Vocation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture / Farm</fullName>
                </value>
                <value>
                    <fullName>Beverage Processing &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>Bus Transporation</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Emergency Vehicles</fullName>
                </value>
                <value>
                    <fullName>Food Processing &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>Forestry / Lumber Products</fullName>
                </value>
                <value>
                    <fullName>General Freight</fullName>
                </value>
                <value>
                    <fullName>General Freight / Hazardous Materials</fullName>
                </value>
                <value>
                    <fullName>Government / Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Hazardous Materials</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Landscaping / Horticulture</fullName>
                </value>
                <value>
                    <fullName>Lease / Finance</fullName>
                </value>
                <value>
                    <fullName>Lease / Manufacturer Sponsored</fullName>
                </value>
                <value>
                    <fullName>Lease / Rental</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Mining / Quarring</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Moving And Storage</fullName>
                </value>
                <value>
                    <fullName>Petroleum</fullName>
                </value>
                <value>
                    <fullName>Petroleum / Hazardous Materials</fullName>
                </value>
                <value>
                    <fullName>Road / Highway Maintenance</fullName>
                </value>
                <value>
                    <fullName>Sanitation / Hazardous Materials</fullName>
                </value>
                <value>
                    <fullName>Sanitation / Refuse</fullName>
                </value>
                <value>
                    <fullName>SERVICES</fullName>
                </value>
                <value>
                    <fullName>Specialized / Heavy Hauling</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
                <value>
                    <fullName>Utility Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repair_Shop_Owned_Volvo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repair Shop Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repair_Shop_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repair Shop Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restrict_Rep_Self_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restrict Rep Self Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety_Rating__c</fullName>
        <label>Safety Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_DSM__c</fullName>
        <label>Sales DSM</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_RVP__c</fullName>
        <label>Sales RVP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Target_Account__c</fullName>
        <formula>IF(TEXT($User.Dealer_Brand__c) = &apos;Mack&apos;, Mack_Sales_Target_Account__c, 
IF(TEXT($User.Dealer_Brand__c) = &apos;Volvo&apos;, Volvo_Sales_Target_Account__c, 
FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this account a target account for a dealer&apos;s sales plan?</inlineHelpText>
        <label>Sales Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Target__c</fullName>
        <label>Sales Target</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Make_Volvo__c</fullName>
        <label>Secondary Make</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Make__c</fullName>
        <label>Secondary Make</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_DSM__c</fullName>
        <label>Service DSM</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_RSD__c</fullName>
        <label>Service RSD</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sleeper_Volvo__c</fullName>
        <label>% Sleeper</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sleeper__c</fullName>
        <label>% Sleeper</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SurvivingAccountId__c</fullName>
        <label>SurvivingAccountId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurvivingPartyId__c</fullName>
        <label>SurvivingPartyId</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Drivers_With_CDL__c</fullName>
        <label>Total Drivers With CDL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Drivers__c</fullName>
        <label>Total Number Of Drivers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tractors_Leased__c</fullName>
        <label>Total Tractors Leased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tractors_Owned__c</fullName>
        <label>Total Tractors Owned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tractors__c</fullName>
        <label>Total Tractors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Trailers_Leased__c</fullName>
        <label>Total Trailers Leased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Trailers_Owned__c</fullName>
        <label>Total Trailers Owned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Trailers__c</fullName>
        <label>Total Trailers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Trucks_Leased__c</fullName>
        <label>Total Trucks Leased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Trucks_Owned__c</fullName>
        <label>Total Trucks Owned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Trucks__c</fullName>
        <label>Total Trucks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Vehicles_Leased__c</fullName>
        <label>Total Vehicles Leased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Vehicles_Owned__c</fullName>
        <label>Total Vehicles Owned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Vehicles__c</fullName>
        <label>Total Fleet Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Cycle_Volvo__c</fullName>
        <label>Trade Cycle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trade_Cycle__c</fullName>
        <label>Trade Cycle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trades_Volvo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trades</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trades__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trades</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trailer_Types_Volvo__c</fullName>
        <label>Trailer Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trailer_Types__c</fullName>
        <label>Trailer Types</label>
        <type>TextArea</type>
    </fields>
</CustomObject>